[package]
name = "RUSTENGINE-http-modules"
version = "0.1.0"
authors = ["Funny Systems <RUSTENGINE@funny.systems>", "施華桐 <gundambox.shi@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate_type = ["staticlib"]

[dependencies]
libc = "0.2"
memoffset = "0.6.3"

[build-dependencies]
bindgen = "0.58.1"
